syntax = "proto3";

package auth;

option go_package = "tuzov.sso.v1;ssov1";

service Auth {
    rpc Register (RegisterRequest) returns (ReqisterResopnse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdmineResponse);
} 

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message ReqisterResopnse {
    int64 user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    int32 app_id = 3;
}

message LoginResponse {
    string token = 1;
}

message IsAdminRequest {
   int64 user_id = 1;
}

message IsAdmineResponse {
    bool is_admin = 1;
}

// под роликом у николая тузова ссылка и руководство по установке protoc и сопутствующих файлов для генерации кода на го, обязательно установить. тайм код ролика 23:38